--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Garfield THPS Archive
+decription: This will be updated with new THPS save files, create a parks, and more content. Bookmark this site!
